--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,23 @@ nav.navbar {
   width: 100%;
   z-index: 99;
 }
-
+.last-sec-img img:hover {
+  border: 3px solid #ff6900;
+}
+.last-sec-img img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.last-sec .slick-prev{
+  display: none !important;
+}
+.last-sec .slick-next{
+  display: none !important;
+}
+.slick-list{
+  padding: 30px 0px 30px !important;
+}
 /* responsive start */
 @media only screen and (max-width: 768px) {
   .leaflet-container{
