--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ nav.navbar {
 }
 /* responsive start */
 @media only screen and (max-width: 768px) {
+  
   .TabSec .box-innertab {
     padding: 0px !important;
   }
@@ -46,7 +47,8 @@ nav.navbar {
     height: 50vh !important;
   }
   .hero-leftMain{
-    height: 50vh !important;
+    align-items: end !important;
+    height: 60vh !important;
     border-right: none !important;
   }
   .hero-left{
@@ -372,9 +374,23 @@ section.whyVtv .service{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+.buttonMainHomeBanner{
+  padding: 10px 20px;
+  background: linear-gradient(99.53deg, #FFE600 -166.03%, #FF3D00 168.83%);
+  border: none;
+  border-radius: 3px;
+  padding: 15px 40px;
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 20px;
+}
+.hero-leftMain .herofirst h1.text-white {
+  font-size: 68px;
+}
 .hero-leftMain:hover {
     cursor: pointer;
-    background-image: linear-gradient(to right, rgb(0 0 0 / 55%), rgb(0 0 0 / 55%)), url(./components/assets/banner/commercial.gif);  
+    background-image: linear-gradient(to right, rgb(0 0 0 / 55%), rgb(0 0 0 / 55%)), url(./components/assets/banner/heroBanner.png);  
     border: none !important;
     border-radius: 2px !important;
     display: flex;
@@ -421,16 +437,16 @@ linear-gradient(0deg, #FFFFFF, #FFFFFF);
   -webkit-text-fill-color: transparent;   
 }
 .hero-leftMain{
-  background: url(./components/assets/banner/commercial.gif) no-repeat;
+  background: url(./components/assets/banner/heroBanner.png) no-repeat;
   /* border: none !important; */
   border-radius: 2px !important;
   display: flex;
   justify-content: center;
-  align-items: end;
-  height: 100vh;
+  align-items: center;
+  height: 80vh;
   background-size: 100% 100%;
   padding-bottom: 22px;
-  border-right: 2px solid #f75102;
+  /* border-right: 2px solid #f75102; */
 }
 .hero-leftWind:hover h2{
   font-size: 45px;
@@ -649,6 +665,13 @@ button.btnwork:hover {
 .menunav.navbar-nav a.nav-link:hover {
   color: #ff8027;
 }
+.menunav.navbar-nav a.nav-link.active {
+  color: #ff8027;
+}
+.menunav:hover {
+  border: 1px solid #ff8027 !important;
+}
+
 button{
   font-family: "Urbanist", sans-serif !important;
 }
@@ -694,13 +717,14 @@ button{
 }
 .paraBG{
   font-family: "Urbanist", sans-serif;
-  font-weight: 900;
+  font-weight: 600;
   /* line-height: 89px; */
   /* letter-spacing: 0em; */
   /* text-align: left; */
-  background: linear-gradient(125.75deg, #FFE600 -16.5%, #FF3D00 93.09%), linear-gradient(0deg, #FFFFFF, #FFFFFF);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #ffffff;
+  /* background: linear-gradient(125.75deg, #FFE600 -16.5%, #FF3D00 93.09%), linear-gradient(0deg, #FFFFFF, #FFFFFF); */
+  /* -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
 }
 .menunav.navbar-nav a.nav-link {
   color: white;
@@ -708,6 +732,10 @@ button{
   font-size: 18px;
 }
 @media only screen and (max-width: 768px) {
+  .hero-leftMain .herofirst h1.text-white {
+    font-size: 30px !important;
+}
+
 
 .menunav {
   background: #000000;
